# zorvyn

./: .gitignore  README.md  migrate_name.py  pyproject.toml  render.yaml  requirements.txt  seed.py  serve.py
backend/: main.py
backend/api/: deps.py
backend/api/v1/: analytics.py  auth.py  records.py  users.py
backend/core/: config.py  errors.py  permissions.py  role_extractor.py  security.py
backend/db/: session.py
backend/models/: record.py  user.py
backend/schemas/: analytics.py  record.py  user.py
backend/scripts/: migrate_sqlite_to_target.py
backend/services/: analytics.py  record.py  user.py
frontend/: next.config.mjs  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/components/: AnalyticsCharts.js  AuthScreen.js  Badge.js  CategoryChart.js  CreateModal.js  DashboardView.js  EditModal.js  RecordForm.js  RecordsView.js  TrendChart.js  UsersView.js
frontend/app/lib/: api.js
tests/: conftest.py  test_main.py
